Fixing spacing and color css issues.

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -14,7 +14,7 @@
     color: white;
 }
 
-.topsection.h2 {
+.topsection h1 {
     color: white;
 }
 
@@ -23,4 +23,5 @@
     width:100%;
     height:110px;
     color:white;
+    align:center;
 }
